objects/Wholesaler__c.object
<CustomObject>
    <fields>
        <fullName>APTS_CusAllocation__c</fullName>
        <description>R4.1 - Used to save Wholesaler LOD  information for approval process</description>
        <label>Customer Allocation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Customer_Allocation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Allocation</label>
        <referenceTo>APTS_Master_Picklist_Table__c</referenceTo>
        <relationshipLabel>WholeSalers</relationshipLabel>
        <relationshipName>WholeSalers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Distribution_Channel__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Distribution Channel</label>
        <referenceTo>APTS_Master_Picklist_Table__c</referenceTo>
        <relationshipLabel>WholeSalers (Distribution Channel)</relationshipLabel>
        <relationshipName>WholeSalers1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Incoterms__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Incoterms</label>
        <referenceTo>APTS_Master_Picklist_Table__c</referenceTo>
        <relationshipLabel>WholeSalers (Customer Incoterms)</relationshipLabel>
        <relationshipName>WholeSalers2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_LocMainBusiness__c</fullName>
        <description>R4.1 - Used to save Wholesaler LOD  information for approval process</description>
        <label>Local Main Business</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_LocalSegment__c</fullName>
        <description>R4.1 - Used to save Wholesaler LOD  information for approval process</description>
        <label>Local Segment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Local_Channel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Local Channel</label>
        <referenceTo>APTS_Master_Picklist_Table__c</referenceTo>
        <relationshipLabel>WholeSalers (Local Channel)</relationshipLabel>
        <relationshipName>WholeSalers3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Local_Main_Business__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Local Main Business</label>
        <referenceTo>APTS_Master_Picklist_Table__c</referenceTo>
        <relationshipLabel>WholeSalers (Local Main Business)</relationshipLabel>
        <relationshipName>WholeSalers4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Local_Segmentation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Local Segmentation</label>
        <referenceTo>APTS_Master_Picklist_Table__c</referenceTo>
        <relationshipLabel>WholeSalers (Local Segmentation)</relationshipLabel>
        <relationshipName>WholeSalers5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Payment_Terms__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Terms</label>
        <referenceTo>APTS_Master_Picklist_Table__c</referenceTo>
        <relationshipLabel>WholeSalers (Payment Terms)</relationshipLabel>
        <relationshipName>WholeSalers6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_SalesDistrict__c</fullName>
        <description>R4.1 - Used to save Wholesaler LOD  information for approval process</description>
        <label>Sales District</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Sales_District__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales District</label>
        <referenceTo>APTS_Master_Picklist_Table__c</referenceTo>
        <relationshipLabel>WholeSalers (Sales District)</relationshipLabel>
        <relationshipName>WholeSalers7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Sales_Office__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Sales Office</label>
        <referenceTo>APTS_Master_Picklist_Table__c</referenceTo>
        <relationshipLabel>WholeSalers (Sales Office)</relationshipLabel>
        <relationshipName>WholeSalers8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>WholeSalers</relationshipLabel>
        <relationshipName>WholeSalers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Distribution_Channel__c</fullName>
        <label>Distribution Channel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incoterms__c</fullName>
        <label>Incoterms</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Channel__c</fullName>
        <label>Local Channel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LodId__c</fullName>
        <label>LodId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Terms__c</fullName>
        <label>Payment Terms</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Proposal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote/Proposal</label>
        <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
        <relationshipLabel>WholeSalers</relationshipLabel>
        <relationshipName>WholeSalers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SAP_Customer_ID__c</fullName>
        <label>SAP Customer ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Office__c</fullName>
        <label>Sales Office</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Organisation__c</fullName>
        <label>Sales Organisation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Wholesaler</label>
    <nameField>
        <label>Wholesaler Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WholeSalers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>